<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item android:id="@+id/item1"
        android:title="@string/menu_item1"
        android:icon="@drawable/number_1_color"
        app:showAsAction="ifRoom|withText"/>
    <group
        android:id="@+id/group">
        <item android:id="@+id/group_item1"
            android:onClick="onGroupItemClick"
            android:title="@string/menu_group_item1"
            android:icon="@drawable/number_1_circle"/>
        <item android:id="@+id/group_item2"
            android:onClick="onGroupItemClick"
            android:title="@string/menu_group_item2"
            android:icon="@drawable/number_2_circle"/>
    </group>
    <item android:id="@+id/submenu"
        android:title="@string/menu_submenu_title"
        app:showAsAction="ifRoom|withText">
        <menu>
            <item android:id="@+id/submenu_item1"
                android:title="@string/menu_submenu_title1"/>
        </menu>
    </item>
</menu>