<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:id="@+id/sample_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/black"
            android:textSize="25sp"
            tools:text="sample_text" />

        <Button
            android:id="@+id/resBtn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/btn_res"
            android:textAllCaps="false" />

        <Button
            android:id="@+id/activityBtn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/btn_activity"
            android:textAllCaps="false" />

        <Button
            android:id="@+id/fragmentBtn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/btn_fragment"
            android:textAllCaps="false" />

        <Button
            android:id="@+id/dataStoreBtn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/btn_datastore"
            android:textAllCaps="false" />

        <Button
            android:id="@+id/dataBindingBtn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/btn_databinding"
            android:textAllCaps="false" />

        <Button
            android:id="@+id/workManagerBtn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="WorkManager应用"
            android:textAllCaps="false" />

        <Button
            android:id="@+id/viewpage2Btn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="ViewPage2应用"
            android:textAllCaps="false" />

        <Button
            android:id="@+id/intentBtn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Intent应用"
            android:textAllCaps="false" />

        <Button
            android:id="@+id/constraintBtn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="约束布局"
            android:textAllCaps="false" />

        <Button
            android:id="@+id/notificationBtn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="notification通知"
            android:textAllCaps="false" />
    </LinearLayout>


</ScrollView>